Reorganize the folders
